--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 
 /.vs
 /EventHubsConsumer/.vs
-/EventHubsConsumer/EventHubsConsumer/bin
-/EventHubsConsumer/EventHubsConsumer/obj
+/EventHubsConsumer/bin
+/EventHubsConsumer/obj
