--- a/EventHubsConsumer/EventHubsConsumer.csproj
+++ b/EventHubsConsumer/EventHubsConsumer.csproj
@@ -1,13 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Include="EventHubsConsumer" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\eventcollector\src\eventcollector.csproj" />
@@ -15,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.2.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="2.2.1" />
   </ItemGroup>
+
 </Project>
